--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vitejs/plugin-vue": "^5.1.3",
+    "@vue/compiler-sfc": "^3.4.38",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
