--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,3 +4,6 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 CMD ["gunicorn", "-b", "0.0.0.0:8000", "--timeout", "120", "app.main:app"]
+
+# Health check to ensure the service is running
+HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 CMD curl --fail http://localhost:8000/metrics || exit 1
